latex2mmlc/src/snapshots/latex2mmlc__tests__text_no_braces_more_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text    xx"
---
<math>
    <mtext>x</mtext>
    <mi>x</mi>
</math>
