latex2mmlc/src/snapshots/latex2mmlc__tests__text_no_braces_space_after.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text x y"
---
<math>
    <mtext>x</mtext>
    <mi>y</mi>
</math>
