latex2mmlc/src/snapshots/latex2mmlc__tests__text_rq.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{\\rq}"
---
<math>
    <mtext>’</mtext>
</math>
