latex2mmlc/src/snapshots/latex2mmlc__tests__text_then_space.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{x}~y"
---
<math>
    <mtext>x</mtext>
    <mtext> </mtext>
    <mi>y</mi>
</math>
