latex2mmlc/src/snapshots/latex2mmlc__tests__text_transform_sup.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\mathbb{N} \\cup \\mathbb{N}^+"
---
<math>
    <mi>ℕ</mi>
    <mo>∪</mo>
    <msup>
        <mi>ℕ</mi>
        <mo>+</mo>
    </msup>
</math>
