latex2mmlc/src/snapshots/latex2mmlc__tests__text_with_escape_brace.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{a\\}b}"
---
<math>
    <mtext>a}b</mtext>
</math>
