latex2mmlc/src/snapshots/latex2mmlc__tests__text_with_group.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{x{y}z{}p{}}"
---
<math>
    <mtext>xyzp</mtext>
</math>
