latex2mmlc/src/snapshots/latex2mmlc__tests__text_with_unclosed_group.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{x{}"
---
LatexError(
    9,
    UnclosedGroup(
        GroupEnd,
    ),
)
