latex2mmlc/src/snapshots/latex2mmlc__tests__text_with_weird_o.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\text{x\\o y}"
---
<math>
    <mtext>xøy</mtext>
</math>
