latex2mmlc/src/snapshots/latex2mmlc__tests__textbf.snap
---
source: latex2mmlc/src/lib.rs
expression: "\\textbf{x}"
---
<math>
    <mtext>𝐱</mtext>
</math>
